# mikrotik-api-rs

./: Cargo.toml  README.md
src/: lib.rs
src/api/: error.rs  listener.rs  mod.rs  read.rs
src/api/blocking/: de.rs
src/api/call/: array.rs  mod.rs  one_shot.rs  streaming.rs
src/api/de/: error.rs  mod.rs
src/api/model/: mod.rs
