[package]
name = "mikrotik_api"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true

[dependencies]
bytes = "1.2.1"
tokio = { version = "1.20.1", features = ["full"] }
serde = { version = "1.0.144", features = ["derive"]}
md5 = "0.7.0"
hex = "0.4.3"
log = "0.4.17"
rand = "0.8.5"
futures = "0.3.24"
simple_logger = "2.3.0"
clap = { version = "3.2.20", features = ["derive"] }
human_bytes = "0.3.1"

[features]
