[package]
name = "mikrotik_api"
description = "Rust library & minimal client to connect and interact with Mikrotik RouterOS API, usually exposed on port 8728"
categories = ["api-bindings", "asynchronous", "command-line-utilities"]
keyword = ["mikrotik", "routeros", "api", "async", "cli"]
version = "0.3.0"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Nic0w/mikrotik-api-rs"
homepage = "https://github.com/Nic0w/mikrotik-api-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true

[dependencies]
bytes = "1.2.1"
tokio = { version = "1.21.2", features = ["full"] }
serde = { version = "1.0.145", features = ["derive"] }
md5 = "0.7.0"
hex = "0.4.3"
log = "0.4.17"
rand = "0.8.5"
futures = "0.3.24"
simple_logger = "2.3.0"
clap = { version = "4.0.4", features = ["derive"] }
human_bytes = "0.3.1"
dialoguer = "0.10.2"

[features]
